# maptools

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
.github/workflows/: conda.yml  python-package-conda.yml  python-package.yml  python-publish.yml  sphinx.yml
conda/: environment.yaml  meta.yaml
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: documentation_options.js
docs/source/: conf.py  index.rst
maptools/: __init__.py  _accumulate.py  _cc.py  _crop.py  _dilate.py  _erode.py  _fft.py  _filter.py  _fit.py  _fsc.py  _fsc3d.py  _genmask.py  _map2mtz.py  _mask.py  _pdb2map.py  _rebin.py  _reorder.py  _rescale.py  _rotate.py  _segment.py  _threshold.py  _transform.py  _version.py  accumulate.py  cc.py  cli.py  command_line.py  crop.py  dilate.py  edit.py  engines.py  erode.py  external.py  fft.py  filter.py  fit.py  fsc.py  fsc3d.py  genmask.py  main.py  (+14 more)
maptools/engines/: __init__.py  _dilate.py  _erode.py  _filter.py  _fit.py  _fsc3d.py  _reorder.py  _threshold.py  ops.py
selknam/maptools/: __init__.py  cc.py  command_line.py  crop.py  edit.py  fft.py  filter.py  fit.py  fsc.py  fsc3d.py  map2mtz.py  mask.py  pdb2map.py  rebin.py  reorder.py  rescale.py  rotate.py  segment.py  threshold.py  transform.py
test_data/: file.mrc
tests/: conftest.py  test_accumulate.py  test_cc.py  test_cli.py  test_crop.py  test_edit.py  test_engines.py  test_fft.py  test_filter.py  test_fit.py  test_fsc.py  test_fsc3d.py  test_managers.py  test_map2mtz.py  test_mask.py  test_models.py  test_pdb2map.py  test_rebin.py  test_reorder.py  test_rescale.py  test_rotate.py  test_segment.py  test_threshold.py  test_transform.py  test_utils.py
