[metadata]
name = maptools

description = Manipulate maps
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/rosalindfranklininstitute/maptools

project_urls =
    Source=https://github.com/rosalindfranklininstitute/maptools
    Tracker=https://github.com/rosalindfranklininstitute/maptools/issues

author = James Parkhurst

author_email = james.parkhurst@diamond.ac.uk

license = Apache

license_file = LICENSE

keywords = 
    EM

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

platforms = 
    unix
    linux
    osx
    cygwin
    win32

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=maptools --doctest-modules -rs
